继续调整绘制--zmx

--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>this is main input</h1>
+    <h1>这是一个主页</h1>
     <script>
         // 添加请求拦截器
         axios.interceptors.request.use(function (config) {
