--- a/views/login.html
+++ b/views/login.html
@@ -12,10 +12,6 @@
     <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
     <style>
         .box {
-            /* display: flex;
-            justify-content: space-around;
-            align-items: center;
-            flex-direction: column; */
             height: 500px;
             width: 600px;
             margin: 0 auto;
@@ -61,9 +57,11 @@
         // 添加请求拦截器
         axios.interceptors.request.use(function (config) {
             // 在发送请求之前做些什么
+            let token = window.localStorage.getItem('token')
             //添加测试自定义头部
-            config.headers["Authorization"] = document.cookie || '';
-            // config.headers["loginedtoken"] = document.cookie || '';
+            if (token) {
+                config.headers["Authorization"] = token
+            }
             return config;
         }, function (error) {
             // 对请求错误做些什么
@@ -72,15 +70,15 @@
 
         //添加响应拦截
         axios.interceptors.response.use(function (response) {
-            // console.log(response);
-            // 对响应数据做点什么
-            //只要需要的信息
-            // return response;
+            if (response.data.code === -2) {
+                alert('登录失效，请重新登录！')
+                resLogin()
+            }
             return {
-                status: response.status,
-                data:response.data
+                data: response.data
             }
         }, function (error) {
+            console.log(error)
             // 对响应错误做点什么
             return Promise.reject(error);
         });
@@ -99,13 +97,15 @@
                 }
             }).then(res => {
                 console.log(res);
-                //设置cookie----token
-                if (res.status == 200 && res.data.code == 1) {
-                    document.cookie = `user=${res.data.token}`
+                //设置localStorage
+                if (res.data.code === 0) {
+                    window.localStorage.setItem('token', res.data.token)
                     alert('登录成功！')
                 } else {
-                    alert('登录失败,请检查账号或者密码！')
+                    alert(res.data.errorMsg)
                 }
+            }).catch((err) => {
+                console.log(err)
             })
         })
         $('#test1').click(function () {
@@ -113,24 +113,29 @@
                 method: 'get',
                 url: '/one',
             }).then(res => {
-                if (res.data.code == -1) {
+                console.log(res)
+                if (res.data.code === 0) {
                     alert(res.data.errorMsg)
                 } else {
-                    console.log(res)
+                    alert(res.data.errorMsg)
                 }
-            })
+            }).catch((error => {
+                console.log(error)
+            }))
         })
         $('#test2').click(function () {
             axios({
                 method: 'get',
                 url: '/two',
             }).then(res => {
-                if (res.data.code == -1) {
-                    alert(res.data.errorMsg)
-                } else {
+                if (res.data.code === 0) {
                     console.log(res)
+                } else {
+                    alert(res.data.errorMsg)
                 }
-            })
+            }).catch((error => {
+                console.log(error)
+            }))
         })
 
         $('#test3').click(function () {
@@ -138,12 +143,14 @@
                 method: 'get',
                 url: '/there',
             }).then(res => {
-                if (res.data.code == -1) {
-                    alert(res.data.errorMsg)
-                } else {
+                if (res.data.code === 0) {
                     console.log(res)
+                } else {
+                    alert(res.data.errorMsg)
                 }
-            })
+            }).catch((error => {
+                console.log(error)
+            }))
         })
 
         $('#test4').click(function () {
@@ -151,17 +158,18 @@
                 method: 'get',
                 url: '/show-tables',
             }).then(res => {
-                if (res.data.code == -1) {
-                    alert(res.data.errorMsg)
-                } else {
+                if (res.data.code == 0) {
                     console.log(res)
+                } else {
+                    alert(res.data.errorMsg)
                 }
-            })
+            }).catch((error => {
+                console.log(error)
+            }))
         })
 
         function resLogin() {
-            console.log('正在注销cookie！');
-            document.cookie = `user=; expires=${new Date(Date.now()-3600*24*1000)}`;
+            window.localStorage.clear('token')
         }
     </script>
 </body>
